// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with levels @500px 1`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem test"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              test
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2020
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(270.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2019
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(135.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2018
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2017
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Andel
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,208.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,166.9)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                20 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,125.3)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                40 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,83.7)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                60 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,42.099999999999994)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                80 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,0.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                100 %
              </text>
            </g>
          </g>
          <g
            class="levels"
          >
            <rect
              class="level"
              data-testid="level-high"
              fill="#3baa34"
              height="20.80000000000001"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
            <rect
              class="level"
              data-testid="level-mid"
              fill="#fd9c00"
              height="83.19999999999999"
              opacity="0.2"
              width="405"
              x="0"
              y="20.799999999999997"
            />
            <rect
              class="level"
              data-testid="level-low"
              fill="#e30713"
              height="104"
              opacity="0.2"
              width="405"
              x="0"
              y="104"
            />
          </g>
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M405,101.225L270,176.8L135,134.534L0,182.208"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          />
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="405"
              cy="101.224656"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="270"
              cy="176.79999999999998"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="135"
              cy="134.5344"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="0"
              cy="182.208"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Render with levels reversed @500px 1`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem test"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              test
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
          <g
            class="legendItem test2"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              test2
            </text>
            <line
              stroke="#90CAF9"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2020
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(270.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2019
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(135.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2018
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2017
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Antall
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,208.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,174.9516129032258)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,141.40322580645162)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,107.85483870967741)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,74.3064516129032)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,4
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,40.75806451612902)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,5
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,7.209677419354856)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,6
              </text>
            </g>
          </g>
          <g
            class="levels"
          >
            <rect
              class="level"
              data-testid="level-high"
              fill="#3baa34"
              height="67.09677419354838"
              opacity="0.2"
              width="405"
              x="0"
              y="140.90322580645162"
            />
            <rect
              class="level"
              data-testid="level-mid"
              fill="#fd9c00"
              height="67.09677419354841"
              opacity="0.2"
              width="405"
              x="0"
              y="73.8064516129032"
            />
            <rect
              class="level"
              data-testid="level-low"
              fill="#e30713"
              height="73.8064516129032"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
          </g>
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M270,157.677L135,89.507L0,166.4"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
            <path
              class="line"
              d="M270,40.258L135,29.523L0,127.484"
              fill="none"
              opacity="1"
              stroke="#90CAF9"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          >
            <path
              class="line"
              d="M405,35.782L270,157.677"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-dasharray: 10, 10; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
            <path
              class="line"
              d="M405,163.236L270,40.258"
              fill="none"
              opacity="1"
              stroke="#90CAF9"
              style="stroke-width: 3; stroke-dasharray: 10, 10; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="405"
              cy="35.781703225806446"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="270"
              cy="157.67741935483872"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="135"
              cy="89.50709677419354"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="0"
              cy="166.4"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="405"
              cy="163.2363870967742"
              fill="#90CAF9"
              opacity="1"
              r="4"
              stroke="#90CAF9"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="270"
              cy="40.25806451612902"
              fill="#90CAF9"
              opacity="1"
              r="4"
              stroke="#90CAF9"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="135"
              cy="29.522580645161273"
              fill="#90CAF9"
              opacity="1"
              r="4"
              stroke="#90CAF9"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="0"
              cy="127.48387096774194"
              fill="#90CAF9"
              opacity="1"
              r="4"
              stroke="#90CAF9"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Render with many years 1`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem Nasjonalt"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              Nasjonalt
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2015
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(101.75,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2017
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(203,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2019
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(304.25,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2021
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2023
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Antall
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,208.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,183.1341463414634)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,05
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,157.76829268292684)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,132.40243902439025)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,15
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,107.03658536585365)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,81.67073170731707)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,25
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,56.304878048780495)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,30.939024390243908)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,35
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,5.5731707317072985)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,4
              </text>
            </g>
          </g>
          <g
            class="levels"
          >
            <rect
              class="level"
              data-testid="level-high"
              fill="#3baa34"
              height="101.46341463414635"
              opacity="0.2"
              width="405"
              x="0"
              y="106.53658536585365"
            />
            <rect
              class="level"
              data-testid="level-mid"
              fill="#fd9c00"
              height="101.46341463414635"
              opacity="0.2"
              width="405"
              x="0"
              y="5.0731707317072985"
            />
            <rect
              class="level"
              data-testid="level-low"
              fill="#e30713"
              height="5.073170731707307"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
          </g>
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M0,50.732L50.625,45.659L101.25,40.585L151.875,35.512L202.5,30.439"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          >
            <path
              class="line"
              d="M202.5,30.439L253.125,25.366L303.75,20.293L354.375,15.22L405,10.146"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-dasharray: 10, 10; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="0"
              cy="50.73170731707317"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="50.625"
              cy="45.65853658536585"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="101.25"
              cy="40.58536585365853"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="151.875"
              cy="35.51219512195121"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="202.5"
              cy="30.439024390243908"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="253.125"
              cy="25.365853658536587"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="303.75"
              cy="20.292682926829265"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="354.375"
              cy="15.219512195121942"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="405"
              cy="10.14634146341462"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Render with many years, ending with even 1`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem Nasjonalt"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              Nasjonalt
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(45.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2014
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(135.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2016
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(225.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2018
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(315.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2020
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2022
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Antall
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,208.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,182.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,05
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,156.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,130.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,15
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,104.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,78.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,25
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,52.50000000000002)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,26.50000000000002)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,35
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,0.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,4
              </text>
            </g>
          </g>
          <g
            class="levels"
          >
            <rect
              class="level"
              data-testid="level-high"
              fill="#3baa34"
              height="104"
              opacity="0.2"
              width="405"
              x="0"
              y="104"
            />
            <rect
              class="level"
              data-testid="level-mid"
              fill="#fd9c00"
              height="104"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
            <rect
              class="level"
              data-testid="level-low"
              fill="#e30713"
              height="0"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
          </g>
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M0,46.8L45,46.8L90,46.8L135,41.6L180,36.4L225,31.2L270,26"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          >
            <path
              class="line"
              d="M270,26L315,20.8L360,15.6L405,10.4"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-dasharray: 10, 10; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="0"
              cy="46.80000000000002"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="45"
              cy="46.80000000000002"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="90"
              cy="46.80000000000002"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="135"
              cy="41.600000000000016"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="180"
              cy="36.400000000000006"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="225"
              cy="31.200000000000003"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="270"
              cy="26.00000000000002"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="315"
              cy="20.80000000000002"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="360"
              cy="15.600000000000014"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="405"
              cy="10.40000000000001"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Render with many years, including missing years 1`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem Nasjonalt"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              Nasjonalt
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2015
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(152.375,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2018
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(304.25,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2021
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2023
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Antall
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,208.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,181.83333333333334)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,05
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,155.16666666666669)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,128.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,15
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,101.83333333333331)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,75.16666666666669)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,25
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,48.500000000000014)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,21.83333333333335)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,35
              </text>
            </g>
          </g>
          <g
            class="levels"
          >
            <rect
              class="level"
              data-testid="level-high"
              fill="#3baa34"
              height="106.66666666666669"
              opacity="0.2"
              width="405"
              x="0"
              y="101.33333333333331"
            />
            <rect
              class="level"
              data-testid="level-mid"
              fill="#fd9c00"
              height="101.33333333333331"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
            <rect
              class="level"
              data-testid="level-low"
              fill="#e30713"
              height="0"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
          </g>
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M0,42.667L50.625,37.333L151.875,32"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          >
            <path
              class="line"
              d="M253.125,26.667L303.75,21.333L354.375,16L405,10.667"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-dasharray: 10, 10; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="0"
              cy="42.66666666666668"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="50.625"
              cy="37.33333333333334"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="151.875"
              cy="32"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="253.125"
              cy="26.666666666666664"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="303.75"
              cy="21.33333333333335"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="354.375"
              cy="16.000000000000014"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="405"
              cy="10.666666666666675"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Render with many years, including missing years 2`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem Nasjonalt"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              Nasjonalt
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2015
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(152.375,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2018
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(304.25,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2021
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2023
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Antall
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,208.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,181.83333333333334)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,05
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,155.16666666666669)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,128.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,15
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,101.83333333333331)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,75.16666666666669)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,25
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,48.500000000000014)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,21.83333333333335)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,35
              </text>
            </g>
          </g>
          <g
            class="levels"
          >
            <rect
              class="level"
              data-testid="level-high"
              fill="#3baa34"
              height="106.66666666666669"
              opacity="0.2"
              width="405"
              x="0"
              y="101.33333333333331"
            />
            <rect
              class="level"
              data-testid="level-mid"
              fill="#fd9c00"
              height="101.33333333333331"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
            <rect
              class="level"
              data-testid="level-low"
              fill="#e30713"
              height="0"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
          </g>
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M0,42.667L50.625,37.333L151.875,32L253.125,26.667L303.75,21.333L354.375,16"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          >
            <path
              class="line"
              d="M354.375,16L405,10.667"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-dasharray: 10, 10; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="0"
              cy="42.66666666666668"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="50.625"
              cy="37.33333333333334"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="151.875"
              cy="32"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="253.125"
              cy="26.666666666666664"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="303.75"
              cy="21.33333333333335"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="354.375"
              cy="16.000000000000014"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="405"
              cy="10.666666666666675"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Render without levels @250px 1`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem a"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              a
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2020
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(270.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2019
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(135.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2018
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2017
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Antall
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,208.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,173.24576271186442)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,137.99152542372883)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,102.73728813559322)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,67.4830508474576)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,4
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,32.22881355932202)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,5
              </text>
            </g>
          </g>
          <g
            class="levels"
          />
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M405,31.729L270,155.119L135,102.237L0,172.746"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          />
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="405"
              cy="31.72881355932202"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="270"
              cy="155.11864406779662"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="135"
              cy="102.23728813559322"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="0"
              cy="172.74576271186442"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
